--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,111 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="639"
+    android:viewportHeight="639">
+  <group android:scaleX="0.58055556"
+      android:scaleY="0.58055556"
+      android:translateX="134.0125"
+      android:translateY="134.0125">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
+        android:pathData="M319.5,319.5m-314.5,0a314.5,314.5 0,1 1,629 0a314.5,314.5 0,1 1,-629 0"
+        android:strokeWidth="10"
+        android:fillColor="#00000000"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:pathData="M320.35,318.78m-234.35,0a234.35,234.35 0,1 1,468.7 0a234.35,234.35 0,1 1,-468.7 0"
+        android:strokeWidth="10"
+        android:fillColor="#00000000"
+        android:strokeColor="#6a421d"/>
+    <path
         android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M371.33,319.13l102.17,-153.25l-153.25,153.25l51.08,0z"
+        android:fillColor="#6a421d"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M320.25,268.04l-153.25,-102.16l153.25,153.25l0,-51.09z"
+        android:fillColor="#6a421d"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M269.17,319.13l-102.17,153.25l153.25,-153.25l-51.08,0z"
+        android:fillColor="#6a421d"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M320.25,370.21l153.25,102.17l-153.25,-153.25l0,51.08z"
+        android:fillColor="#6a421d"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M371.33,319.13l102.17,-153.25l-153.25,102.16l-153.25,-102.16l102.17,153.25l-102.17,153.24l153.25,-102.16l153.25,102.17l-102.17,-153.25z"
+        android:fillColor="#6a421d"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M473.5,165.88l-153.25,102.16l0,51.09l153.25,-153.25z"
+        android:fillColor="#fdf7e2"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M167,165.88l102.17,153.25l51.08,0l-153.25,-153.25z"
+        android:fillColor="#fdf7e2"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M167,472.38l153.25,-102.17l0,-51.08l-153.25,153.25z"
+        android:fillColor="#fdf7e2"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M320.25,319.13l153.25,153.25l-102.17,-153.25l-51.08,0z"
+        android:fillColor="#fdf7e2"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M370.91,268.96l-50.91,-254.56l0,305.48l50.91,-50.92z"
+        android:fillColor="#6a421d"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M268.59,269.09l-254.56,50.91l305.47,0l-50.91,-50.91z"
+        android:fillColor="#6a421d"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M269.09,370.79l50.91,254.56l0,-305.47l-50.91,50.91z"
+        android:fillColor="#6a421d"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M370.41,370.91l254.56,-50.91l-305.47,0l50.91,50.91z"
+        android:fillColor="#6a421d"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M370.41,268.96l-50.91,-254.56l-50.91,254.56l-254.56,50.92l254.56,50.91l50.91,254.56l50.91,-254.56l254.56,-50.91l-254.56,-50.92z"
+        android:fillColor="#6a421d"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M320,14.4l-50.91,254.56l50.91,50.92l0,-305.48z"
+        android:fillColor="#fdf7e2"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M14.03,320l254.56,50.91l50.91,-50.91l-305.47,0z"
+        android:fillColor="#fdf7e2"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M320,625.35l50.91,-254.56l-50.91,-50.91l0,305.47z"
+        android:fillColor="#fdf7e2"
+        android:strokeColor="#6a421d"/>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M319.5,320l305.47,0l-254.56,-50.91l-50.91,50.91z"
+        android:fillColor="#fdf7e2"
+        android:strokeColor="#6a421d"/>
+  </group>
 </vector>
